# Digital-Banking-Ecosystem

./: .replit  app.py  pyproject.toml  test.py
Digital-Banking-Ecosystem/: HACKER_BOT_QUICK_REFERENCE.md  HACKER_BOT_README.md  PRESENTATION_GUIDE.md  SYSTEM_ARCHITECTURE.md  app.py  hacker_bot.py  hacker_bot_results.json  poc_presentation_results.json  requirements.txt  run_hacker_bot_poc.py
Digital-Banking-Ecosystem/ML_Models/: anshul.ipynb
Digital-Banking-Ecosystem/logs/: behavior.json  captured.csv  kicked.json
Digital-Banking-Ecosystem/ml/: __init__.py  feature_engineering.py  ml_api.py  models.py  train.py
Digital-Banking-Ecosystem/ml/saved_models/: anomaly_detector_scaler.pkl  bot_detector_scaler.pkl  user_verifier.pkl
Digital-Banking-Ecosystem/static/css/: home.css  style.css
Digital-Banking-Ecosystem/static/js/: main.js  tracker.js
Digital-Banking-Ecosystem/templates/: dashboard.html  dashboard_login.html  home.html  register.html
logs/: behavior.json  captured.csv  kicked.json  users.json
ml/: feature_engineering.py  ml_api.py  models.py  synthetic_data.py
ml/saved_models/: anomaly_detector.pkl  bot_detector.pkl  user_verifier.pkl
static/js/: tracker.js
templates/: dashboard.html  error.html  home.html  login.html  verify.html
